--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop Online for Men, Women & Kids Clothing, Shoes, Home Decor Items</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
